# hovertank-game

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/bundles/: input.rs  local_player.rs  mod.rs  tank.rs
src/commands/: menu.rs  mod.rs  splash.rs
src/components/: camera_focus.rs  dampen_movement.rs  dampen_rotation.rs  held_move_actions.rs  hold_position.rs  hover.rs  in_game.rs  last_input.rs  loading.rs  local_input_receiver.rs  local_player.rs  menu.rs  mod.rs  movement_properties.rs  neutralize_roll.rs  rotation_properties.rs  splash.rs  third_person_camera.rs  third_person_camera_focus.rs
src/constants/: camera.rs  menu.rs  mod.rs  movement.rs  orbit.rs  physics.rs
src/events/: log_transition.rs  mod.rs
src/key_mappings/: camera.rs  in_game_ui.rs  mod.rs  movement.rs  movement_key_mapping.rs  rotation.rs
src/plugins/: control.rs  in_game.rs  loading.rs  main_menu.rs  menu.rs  mod.rs  splash.rs  state.rs
src/resources/: assets.rs  mod.rs  timer.rs
src/states/: app.rs  camera_mode.rs  in_game.rs  mod.rs
src/systems/: camera.rs  camera_follow.rs  camera_follow_focus.rs  camera_mode.rs  camera_orbit_focus.rs  control.rs  cursor.rs  hover.rs  in_game.rs  loading.rs  main_menu.rs  menu.rs  mod.rs  movement_control.rs  player_movement_control.rs  rotation_control.rs  splash.rs  third_person_camera.rs  third_person_rotation_control.rs
src/systems/camera/: first_person_camera.rs  mod.rs  third_person_camera.rs
src/systems/control/: mod.rs  movement_control.rs  rotation_control.rs
src/systems/sets/: control_set.rs  (+1 more)
src/traits/: mod.rs
(+15 files in other folders)
