[package]
name = "hovertank-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "^0.14.0", features = ["dynamic_linking", "wayland"]}
bevy_asset_loader = "^0.21.0"
leafwing-input-manager = { git = "https://github.com/ChosunOne/leafwing-input-manager", branch = "v0.14-rc"}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
