[package]
name = "hovertank-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "^0.14.0", features = ["dynamic_linking", "wayland"]}
bevy_asset_loader = {version = "^0.21.0", features = ["progress_tracking"]}
leafwing-input-manager = "0.14.0"
bevy_diagnostic = "0.14.0"
iyes_progress = {version = "0.12", features = ["assets"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
